Atualização do caminho das imagens.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assests/css/reset.css">
-    <link rel="stylesheet" href="../assests/css/estilo.css">
+    <link rel="stylesheet" href="./assests/css/reset.css">
+    <link rel="stylesheet" href="./assests/css/estilo.css">
     <title>Loja de açai</title>
 </head>
 <body>
     
     <header>
-        <img src="assests/imagens/logo-AllAcai.png" alt="Logo da Loja">
+        <img src="./assests/imagens/logo-AllAcai.png" alt="Logo da Loja">
     </header>
 
     <section>
@@ -40,7 +40,7 @@
                 <ul>
                     <li>
                         <figure>
-                            <img src="../assests/imagens/pote-.png" alt="pote de açai">
+                            <img src="./assests/imagens/pote-.png" alt="pote de açai">
                         </figure>
 
                         <div>
@@ -50,7 +50,7 @@
 
                     <li>
                         <figure>
-                            <img src="../assests/imagens/polpa2-.png" alt="polpa de açai">
+                            <img src="./assests/imagens/polpa2-.png" alt="polpa de açai">
                         </figure>
 
                         <div>
@@ -63,7 +63,7 @@
                 <ul>
                     <li>
                         <figure>
-                            <img src="../assests/imagens/polpa1-.png" alt="">
+                            <img src="./assests/imagens/polpa1-.png" alt="">
                         </figure>
 
                         <div>
@@ -73,7 +73,7 @@
 
                     <li>
                         <figure>
-                            <img src="../assests/imagens/picolé-.png" alt="">
+                            <img src="./assests/imagens/picolé-.png" alt="">
                         </figure>
 
                         <div>
